Enable frequency bin selection

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -481,8 +481,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mic_type = 'measurement'\n",
-    "mic_type = 'audio_deck'\n",
+    "mic_type = 'measurement'\n",
+    "#mic_type = 'audio_deck'\n",
     "snr = 0\n",
     "exp_name = '2020_11_26_wall'\n",
     "#exp_name = '2020_12_9_rotating'\n",
@@ -559,7 +559,7 @@
     "    costs = []\n",
     "    for m in range(row.df_matrix.shape[0]):\n",
     "        slice_exp = deepcopy(row.df_matrix[m, i, :])\n",
-    "        slice_the_norm = deepcopy(df_theory[channel_to_mic_mapping[m], i, :])\n",
+    "        slice_the_norm = deepcopy(df_theory[m, i, :])\n",
     "        \n",
     "        slice_the_norm -= np.min(slice_the_norm)\n",
     "        slice_the_norm /= (np.max(slice_the_norm) - np.min(slice_the_norm))\n",
@@ -600,16 +600,15 @@
    },
    "outputs": [],
    "source": [
-    "print(cost_arr.shape)\n",
     "n_mics = cost_arr.shape[1]\n",
     "\n",
-    "fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
+    "fig, axs = plt.subplots(1, n_mics, sharey=True, squeeze=False)\n",
     "fig.set_size_inches(10, 5)\n",
     "fig, ax_cdf = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
     "for m in range(n_mics):\n",
-    "    axs[m].plot(row.df_freq, cost_arr[:, m], label=f'mic{m}', marker='o', color=f'C{m}')\n",
-    "    axs[m].legend()\n",
+    "    axs[0, m].plot(row.df_freq, cost_arr[:, m], label=f'mic{m}', marker='o', color=f'C{m}')\n",
+    "    axs[0, m].legend()\n",
     "    ax_cdf.plot(np.sort(cost_arr[:, m]), np.linspace(0, 1, cost_arr.shape[0]), label=f'mic{m}', color=f'C{m}')\n",
     "ax_cdf.legend()\n",
     "ax_cdf.set_ylabel('cdf')\n",
@@ -683,7 +682,10 @@
     "for m in range(calib_values.shape[0]):\n",
     "    for i, dist in enumerate(row.df_dist):\n",
     "        axs[0, m].semilogy(row.df_freq, calib_values[m, :, i], color=cmap(i/len(row.df_dist)))\n",
-    "    axs[0, m].set_title(f'mic{m}')\n"
+    "    axs[0, m].semilogy(row.df_freq, calib_values[m, :, 0], color=cmap(0), label=f'{row.df_dist[0]}cm')\n",
+    "    axs[0, m].semilogy(row.df_freq, calib_values[m, :, i], color=cmap(i/len(row.df_dist)), label=f'{row.df_dist[-1]}cm')\n",
+    "    axs[0, m].set_title(f'mic{m}')\n",
+    "    axs[0, m].legend(loc='lower right')"
    ]
   },
   {
@@ -803,6 +805,7 @@
    "source": [
     "def cost_period(slice_the, slice_exp):\n",
     "    cost = 0\n",
+    "    assert slice_the.shape[1] == slice_exp.shape[1]\n",
     "    for i in range(slice_exp.shape[0]):\n",
     "        slice_exper = slice_exp[i] - np.mean(slice_exp[i])\n",
     "        fft_exp = np.abs(np.fft.rfft(slice_exper))\n",
@@ -848,7 +851,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -860,6 +863,13 @@
     "#chosen_methods = ['raw', 'normalize', 'calibration-online', 'calibration-offline', 'standardize', 'theoretical'] \n",
     "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
     "#chosen_methods = results.normalization.unique() \n",
+    "\n",
+    "chosen_frequencies = row.df_freq\n",
+    "#chosen_frequencies = good_frequencies\n",
+    "print(f'chosen frequencies: {chosen_frequencies}, {len(chosen_frequencies)}/{len(row.df_freq)}')\n",
+    "\n",
+    "freq_indices = np.where(chosen_frequencies[None, :] ==  row.df_freq[:, None])[0]\n",
+    "np.testing.assert_allclose(row.df_freq[freq_indices], chosen_frequencies)\n",
     "\n",
     "absolute_err_dict = {method:[] for method in chosen_methods}\n",
     "\n",
@@ -876,21 +886,20 @@
     "        matrix_exp = df.loc[df.data_type=='experimental', 'matrix'].iloc[0]\n",
     "        matrix_the = df.loc[df.data_type=='theoretical', 'matrix'].iloc[0]\n",
     "        \n",
-    "        slice_exp = matrix_exp[..., i_d]\n",
-    "        slice_the = matrix_the[..., distances_idx[i_d]]\n",
+    "        slice_exp = matrix_exp[:, freq_indices, i_d]\n",
+    "        slice_the = matrix_the[:, freq_indices, distances_idx[i_d]]\n",
     "        \n",
     "        slice_exp = normalize_slice(slice_exp, method_slice)\n",
     "        slice_the = normalize_slice(slice_the, method_slice)\n",
     "        \n",
     "        costs = []\n",
     "        for d_idx, d in enumerate(distances_grid):\n",
-    "            slice_the_here = matrix_the[..., d_idx]\n",
+    "            slice_the_here = matrix_the[:, freq_indices, d_idx]\n",
     "            \n",
-    "            # TODO(FD)can normalize slices here if we want...\n",
     "            slice_the_here = normalize_slice(slice_the_here, method_slice)\n",
     "            \n",
     "            assert slice_the_here.shape == slice_exp.shape, (slice_the_here.shape, slice_exp.shape)\n",
-    "            cost = cost_function(slice_the_here, slice_exp, row.df_freq, min_freq=min_freq, max_freq=max_freq)\n",
+    "            cost = cost_function(slice_the_here, slice_exp, chosen_frequencies, min_freq=min_freq, max_freq=max_freq)\n",
     "            #cost = cost_period(slice_the_here, slice_exp)\n",
     "            costs.append(cost)\n",
     "            \n",
@@ -902,8 +911,8 @@
     "        \n",
     "        # plotting\n",
     "        for i_mic, mic in enumerate(chosen_mics): \n",
-    "            axs[0, i_mic].plot(row.df_freq, slice_exp[i_mic], label=method, color=f'C{i_method}')\n",
-    "            #axs[0, i_mic].plot(row.df_freq, slice_the[i_mic], color=f'C{i_method}', ls=':')\n",
+    "            axs[0, i_mic].plot(chosen_frequencies, slice_exp[i_mic], label=method, color=f'C{i_method}')\n",
+    "            #axs[0, i_mic].plot(freq_indices, slice_the[i_mic], color=f'C{i_method}', ls=':')\n",
     "            axs[0, i_mic].set_xlim(min_freq, max_freq)\n",
     "            #axs[0, i_mic].set_yscale('log')\n",
     "            axs[0, i_mic].set_ylim(-3, 3)\n",
@@ -968,8 +977,8 @@
     "axs[0, 1].grid(which='both')\n",
     "axs[0, 1].legend(loc='lower right')\n",
     "\n",
-    "\n",
-    "fname = f'results/{exp_name}/performance_{mic_type}_snr{snr}.png'\n",
+    "#fname = f'results/{exp_name}/performance_{mic_type}_snr{snr}_subset.png'\n",
+    "fname = f'results/{exp_name}/performance_{mic_type}_snr{snr}_all.png'\n",
     "save_fig(fig, fname)"
    ]
   },
