--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -198,7 +198,6 @@
     "from frequency_analysis import psd_df_from_spec, get_index_matrix, extract_psd\n",
     "\n",
     "n_spurious = 2\n",
-    "bad_freqs = [2375, 2500, 2750, 2875, 4125, 4250, 4500]\n",
     "\n",
     "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
@@ -213,8 +212,8 @@
     "    # processing\n",
     "    wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
     "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "    wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
     "    wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
+    "    wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
     "    psd, freqs_psd = wall_detector.get_frequency_slice()\n",
     "    std_psd, __ = wall_detector.get_frequency_slice(method=normalized_std)\n",
     "    \n",
@@ -224,7 +223,6 @@
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
-    "    [ax.axhline(f, color='white', ls=':') for f in bad_freqs]\n",
     "\n",
     "    fig, axs = plt.subplots(1, psd.shape[0], squeeze=False, sharey=True)\n",
     "    fig.set_size_inches(15, 5)\n",
@@ -232,7 +230,6 @@
     "        #axs[0, i].errorbar(freqs_psd, psd[i, :], std_psd[i, :], label=f'mic{i}')\n",
     "        axs[0, i].plot(freqs_psd, std_psd[i, :], label=f'mic{i}')\n",
     "        #[axs[0, i].axvline(f, color='black', ls=':') for f in freqs_psd]\n",
-    "        [axs[0, i].axvline(f, color='black', ls=':') for f in bad_freqs]\n",
     "        axs[0, i].legend()\n",
     "    fig.suptitle(label)\n",
     "    \n",
@@ -270,8 +267,8 @@
    "outputs": [],
    "source": [
     "n_distances = 3; i = 0\n",
-    "#filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
-    "filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
+    "filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
+    "#filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
     "#filter_dict = {'mic_type':'measurement', 'snr':0, 'motors':0}; mic_idx = 0\n",
     "df_mic = filter_by_dicts(df_freq, [filter_dict])\n",
     "\n",
@@ -305,8 +302,8 @@
     "import seaborn as sns\n",
     "\n",
     "n_spurious = 2\n",
-    "wall_detector.remove_spurious_freqs(n_spurious, verbose=False, dryrun=False)\n",
     "wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
+    "wall_detector.remove_spurious_freqs(n_spurious, verbose=False, dryrun=False)\n",
     "\n",
     "df_matrix, distances, frequencies = wall_detector.get_df_matrix()\n",
     "df_matrix_std, distances, frequencies = wall_detector.get_df_matrix(method=np.nanstd)\n",
@@ -442,8 +439,8 @@
     "fname = 'results/wall_analysis.pkl'\n",
     "#method = 'dryrun'\n",
     "#method = 'new'\n",
-    "#method = 'replace'\n",
-    "method = 'read'\n",
+    "method = 'replace'\n",
+    "#method = 'read'\n",
     "\n",
     "if method == 'read': \n",
     "    results_df = pd.read_pickle(fname)\n",
@@ -482,10 +479,10 @@
    "outputs": [],
    "source": [
     "mic_type = 'measurement'\n",
-    "#mic_type = 'audio_deck'\n",
+    "mic_type = 'audio_deck'\n",
     "snr = 0\n",
-    "exp_name = '2020_11_26_wall'\n",
-    "#exp_name = '2020_12_9_rotating'\n",
+    "#exp_name = '2020_11_26_wall'\n",
+    "exp_name = '2020_12_9_rotating'\n",
     "\n",
     "filter_dict = dict(\n",
     "    exp_name = exp_name,\n",
@@ -496,10 +493,8 @@
     "if (filter_dict['mic_type'] == 'measurement'):\n",
     "    # only one channel: chosen_mics = [1]\n",
     "    channel_to_mic_mapping = [1]\n",
-    "    chosen_mics = [0]\n",
     "else:\n",
     "    channel_to_mic_mapping = range(4)\n",
-    "    chosen_mics = [3]\n",
     "row = filter_by_dicts(results_df, [filter_dict]).iloc[0]\n",
     "row"
    ]
@@ -524,7 +519,6 @@
     "min_freq = 1500\n",
     "max_freq = 4800\n",
     "\n",
-    "plot_channel_idx = 0\n",
     "calib_function = get_calibration_function(plot=True)\n",
     "\n",
     "max_distance = 50\n",
@@ -697,7 +691,8 @@
     "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix'])\n",
     "method_dict = dict(zip(['raw', 'normalize', 'calibration-offline', 'spline', 'calibration-online', 'standardize', 'zero_mean', 'theoretical'], \n",
     "                       ['', 'normalize', calib_function, calib_values, 'calibration-online', 'standardize', 'zero_mean', 'theoretical']))\n",
-    "normalize_dict = {}\n",
+    "chosen_mics = [2]\n",
+    "plot_channel_idx = 0\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -729,8 +724,6 @@
     "                df_norm = deepcopy(df_theory[chosen_mics][..., distances_idx])\n",
     "            else:\n",
     "                df_norm = deepcopy(df_theory[chosen_mics][..., :])\n",
-    "\n",
-    "        normalize_dict[key] = df_norm\n",
     "\n",
     "        results.loc[len(results), :] = {\n",
     "            'normalization': key,\n",
