Implement better resolved wav file analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -178,6 +178,149 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bin study\n",
+    "from wall_analysis import parse_experiments_wav\n",
+    "df_wav = parse_experiments_wav(exp_name=exp_name)\n",
+    "df_wav"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = df_wav.iloc[-2]\n",
+    "spec = np.mean(np.abs(row.stft), axis=1).T\n",
+    "freqs = row.frequencies_matrix[0, :] \n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax.pcolorfast(range(spec.shape[1]), freqs, np.log10(spec))\n",
+    "#ax.set_ylim(0, 5000)\n",
+    "\n",
+    "wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "spec_all, freqs_spec = wall_detector.fill_from_row(row)\n",
+    "spec_mean = np.mean(spec_all, axis=1)\n",
+    "freq_max = freqs_spec[np.argmax(spec_mean, axis=0)]\n",
+    "print(freq_max[-5:])\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
+    "ax.pcolorfast(range(spec_mean.shape[1]), freqs_spec, np.log10(spec_mean[:-1, :-1]))\n",
+    "ax.plot(range(spec_mean.shape[1]), freq_max, color='black', ls=':')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bin_selection import generate_sweep\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "from pandas_utils import filter_by_dicts\n",
+    "from wall_detector import WallDetector\n",
+    "\n",
+    "bins, t_sec = generate_sweep('sweep')\n",
+    "freqs_all = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "freqs_sweep = freqs_all[bins]\n",
+    "\n",
+    "chosen_dicts = [{\"appendix\":\"\", \"motors\":0, \"mic_type\":'measurement', \"snr\":0}]\n",
+    "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
+    "df_mic_types = filter_by_dicts(df_freq, chosen_dicts)\n",
+    "\n",
+    "fig_bins, ax_bins = plt.subplots()\n",
+    "fig_bins.set_size_inches(10, 5)\n",
+    "\n",
+    "linestyles = {\n",
+    "    0: '-',\n",
+    "    90: ':',\n",
+    "    180: '-.',\n",
+    "    270: '--'\n",
+    "}\n",
+    "\n",
+    "for deg, df_deg in df_wav[df_wav.motors==0].groupby('degree'):\n",
+    "    ls = linestyles[deg]\n",
+    "    for j, (i_row, row) in enumerate(df_deg.iterrows()):\n",
+    "        # processing\n",
+    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "        wall_detector.fill_from_row(row)\n",
+    "        wall_detector.remove_bad_freqs()\n",
+    "        psd, freqs_psd = wall_detector.get_frequency_slice()\n",
+    "        #assert len(freqs_psd) == len(freqs_sweep[bins]), (len(freqs_psd), len(freqs_sweep[bins]))\n",
+    "\n",
+    "        [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls=ls) for f in freqs_psd]\n",
+    "        \n",
+    "        label = f'{row.distance}cm' if deg == 0 else None\n",
+    "        ax_bins.plot([], [], color=f'C{j+1}', ls=ls, label=label)\n",
+    "\n",
+    "[ax_bins.plot([f, f], [0, j+2], color=f'C0', ls=':') for f in freqs_sweep]\n",
+    "ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
+    "ax_bins.set_xlabel('frequency [Hz]')\n",
+    "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
+    "ax_bins.set_yticks([])\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "df_row = filter_by_dicts(df_wav, [{'motors': 0, 'degree':0, 'distance':10}])\n",
+    "assert len(df_row) == 1\n",
+    "row = df_row.iloc[0]\n",
+    "\n",
+    "wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "wall_detector.fill_from_row(row)\n",
+    "psd, freqs_psd = wall_detector.get_frequency_slice()\n",
+    "assert len(freqs_psd) == len(freqs_sweep) + 1\n",
+    "\n",
+    "new_sweep = freqs_psd[:-1]\n",
+    "print(json.dumps(dict(zip(freqs_sweep, new_sweep)), indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check how far new sweep is from measurable frequency bins. \n",
+    "errors_best = np.abs(freqs_all[None, :] - new_sweep[:, None])\n",
+    "error_best = np.min(errors_best, axis=1)\n",
+    "\n",
+    "error_buzz = np.abs(freqs_sweep - new_sweep)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(new_sweep, error_best, label='correct bin')\n",
+    "plt.plot(new_sweep, error_buzz, label='wrong bin')\n",
+    "plt.grid()\n",
+    "plt.legend()\n",
+    "plt.xlabel('frequency [Hz]')\n",
+    "plt.ylabel('absolute error [Hz]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "buzzer_freq_idx = round(N_BUFFER * f / FS)\n",
+    "freqs[buzzer_freq_idx-1: buzzer_freq_idx+2]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -238,15 +381,12 @@
     "    plt.yscale('log')\n",
     "    plt.ylim(1e-3, )\n",
     "\n",
-    "from bin_selection import generate_sweep\n",
-    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "bins, t_sec = generate_sweep('sweep')\n",
     "freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "[ax_bins.plot([f, f], [0, j+1], color=f'C0', ls='-') for f in freqs_sweep[bins]]\n",
     "ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
     "ax_bins.set_xlabel('frequency [Hz]')\n",
     "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
-    "ax_bins.set_xlim(1500, 5000)\n",
     "ax_bins.set_yticks([])\n",
     "pass"
    ]
