--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -261,7 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import read_df_from_wav, get_fname, read_df\n",
+    "from audio_bringup.helpers import get_filename\n",
+    "from evaluate_data import read_df_from_wav, read_df\n",
     "from frequency_analysis import get_spectrogram\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
@@ -365,7 +366,7 @@
     ")\n",
     "exp_name = '2020_12_18_flying'; \n",
     "\n",
-    "fname_motors = get_fname(**kwargs)\n",
+    "fname_motors = get_filename(**kwargs)\n",
     "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav', n_buffer=N_BUFFER)\n",
     "df_motors.loc[:, 'seconds'] = (df_motors.timestamp.values - df_motors.iloc[0].timestamp) / 1000.0"
    ]
@@ -509,7 +510,7 @@
     ")\n",
     "exp_name = '2020_12_2_chirp'; \n",
     "n_buffer = N_BUFFER \n",
-    "fname_chirp = get_fname(**kwargs)\n",
+    "fname_chirp = get_filename(**kwargs)\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "try:\n",
     "    df_chirp = pd.read_pickle(fname)\n",
@@ -603,12 +604,12 @@
     "    snr=False,\n",
     ")\n",
     "exp_name = '2020_10_14_static_new'; \n",
-    "fname_motors = get_fname(motors=True, source=None, distance=None, **kwargs)\n",
+    "fname_motors = get_filename(motors=True, source=None, distance=None, **kwargs)\n",
     "\n",
     "df_motors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_motors}.wav')\n",
     "\n",
     "exp_name = '2020_11_26_wall'; \n",
-    "fname_nomotors = get_fname(motors=False, source='sweep', distance=49, **kwargs)\n",
+    "fname_nomotors = get_filename(motors=False, source='sweep', distance=49, **kwargs)\n",
     "df_nomotors = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_nomotors}.wav')"
    ]
   },
