--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -52,15 +52,8 @@
     "    return ax, im\n",
     "\n",
     "def init_results_df():\n",
-    "    return pd.DataFrame(columns=['mic_type', 'snr', 'motors', 'exp_name', 'df_matrix', 'df_dist', 'df_freq'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return pd.DataFrame(columns=['mic_type', 'snr', 'motors', 'exp_name', 'df_matrix', 'df_dist', 'df_freq'])\n",
+    "\n",
     "def make_dirs(fname):\n",
     "    import os\n",
     "    dirname = os.path.dirname(fname)\n",
@@ -77,17 +70,7 @@
     "    divider = make_axes_locatable(ax)\n",
     "    cax = divider.append_axes('right', size='5%', pad=0.05)\n",
     "    fig.colorbar(im, cax=cax, orientation='vertical');\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "\n",
     "def plot_spectrograms(df_freq):\n",
     "    from frequency_analysis import get_spectrogram_raw\n",
     "    mic_type = 'measurement'\n",
