Add analysis of new measurements

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -146,7 +146,9 @@
    },
    "outputs": [],
    "source": [
-    "exp_name = '2020_12_9_rotating'; \n",
+    "exp_name = '2021_02_09_wall_tukey'; \n",
+    "#exp_name = '2021_02_09_wall'; \n",
+    "#exp_name = '2020_12_9_rotating'; \n",
     "#exp_name = '2020_11_26_wall'; \n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
@@ -178,6 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from wall_detector import WallDetector\n",
     "row = df_wav.iloc[-2]\n",
     "spec = np.mean(np.abs(row.stft), axis=1).T\n",
     "freqs = row.frequencies_matrix[0, :] \n",
@@ -257,8 +260,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Below measured bins were verified with professional software\n",
     "import json\n",
-    "df_row = filter_by_dicts(df_wav, [{'motors': 0, 'degree':0, 'distance':10}])\n",
+    "df_row = filter_by_dicts(df_wav, [{'motors': 0, 'degree':0, 'distance':0}])\n",
     "assert len(df_row) == 1\n",
     "row = df_row.iloc[0]\n",
     "\n",
@@ -298,6 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "f = 1000\n",
     "freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "buzzer_freq_idx = round(N_BUFFER * f / FS)\n",
     "freqs[buzzer_freq_idx-1: buzzer_freq_idx+2]"
@@ -325,7 +330,7 @@
     "\n",
     "n_spurious = 2\n",
     "\n",
-    "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
+    "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":0, \"motors\":0}]\n",
     "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "df_mic_types = filter_by_dicts(df_freq, chosen_dicts)\n",
     "\n",
@@ -338,8 +343,8 @@
     "    # processing\n",
     "    wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
     "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "    wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
-    "    wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
+    "    #wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
+    "    #wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
     "    psd, freqs_psd = wall_detector.get_frequency_slice()\n",
     "    std_psd, __ = wall_detector.get_frequency_slice(method=normalized_std)\n",
     "    \n",
@@ -390,7 +395,8 @@
    "outputs": [],
    "source": [
     "n_distances = 3; i = 0\n",
-    "filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
+    "filter_dict = {'mic_type':'audio_deck', 'snr':3, 'motors':0}; mic_idx = 3\n",
+    "#filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
     "#filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
     "#filter_dict = {'mic_type':'measurement', 'snr':0, 'motors':0}; mic_idx = 0\n",
     "df_mic = filter_by_dicts(df_freq, [filter_dict])\n",
@@ -603,9 +609,10 @@
    "source": [
     "mic_type = 'measurement'\n",
     "mic_type = 'audio_deck'\n",
-    "snr = 0\n",
+    "snr = 3\n",
     "#exp_name = '2020_11_26_wall'\n",
-    "exp_name = '2020_12_9_rotating'\n",
+    "exp_name = '2021_02_09_wall_tukey'\n",
+    "#exp_name = '2020_12_9_rotating'\n",
     "\n",
     "filter_dict = dict(\n",
     "    exp_name = exp_name,\n",
