Add more analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -147,9 +147,9 @@
    "outputs": [],
    "source": [
     "#exp_name = '2021_02_09_wall_tukey'; \n",
-    "exp_name = '2021_02_09_wall'; \n",
+    "#exp_name = '2021_02_09_wall'; \n",
     "#exp_name = '2020_12_9_rotating'; \n",
-    "#exp_name = '2020_11_26_wall'; \n",
+    "exp_name = '2020_11_26_wall'; \n",
     "#fname = f'results/{exp_name}_real.pkl'\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
@@ -251,13 +251,14 @@
    },
    "outputs": [],
    "source": [
-    "distances = df_mic.distance.unique()[:3]\n",
+    "#distances = df_freq.distance.unique()[:3]\n",
     "distances = [8, 9, 16]\n",
-    "filter_dict = {'mic_type':'audio_deck', 'snr':3, 'motors':0}; mic_idx = 3\n",
+    "#filter_dict = {'mic_type':'audio_deck', 'snr':3, 'motors':0}; mic_idx = 3\n",
     "#filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
-    "#filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
+    "filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
     "#filter_dict = {'mic_type':'measurement', 'snr':0, 'motors':0}; mic_idx = 0\n",
     "df_mic = filter_by_dicts(df_freq, [filter_dict])\n",
+    "\n",
     "\n",
     "wall_detector = WallDetector(exp_name=exp_name, mic_type=filter_dict['mic_type'])\n",
     "\n",
@@ -473,12 +474,12 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "#mic_type = 'measurement'\n",
-    "mic_type = 'audio_deck'\n",
-    "snr = 3\n",
-    "#exp_name = '2020_11_26_wall'\n",
+    "mic_type = 'measurement'\n",
+    "#mic_type = 'audio_deck'\n",
+    "snr = 0\n",
+    "exp_name = '2020_11_26_wall'\n",
     "#exp_name = '2021_02_09_wall_tukey'\n",
-    "exp_name = '2021_02_09_wall'\n",
+    "#exp_name = '2021_02_09_wall'\n",
     "#exp_name = '2020_12_9_rotating'\n",
     "\n",
     "filter_dict = dict(\n",
@@ -865,9 +866,7 @@
     "#method_slice = ''\n",
     "method_slice = 'standardize' \n",
     "\n",
-    "chosen_methods = ['calibration-online', 'calibration-offline', 'spline', 'standardize', 'theoretical'] \n",
-    "#chosen_methods = ['raw', 'normalize', 'calibration-online', 'calibration-offline', 'standardize', 'theoretical'] \n",
-    "#chosen_methods = ['raw', 'standardize', 'theoretical'] \n",
+    "chosen_methods = ['raw', 'normalize', 'calibration-online', 'spline', 'standardize', 'theoretical'] \n",
     "#chosen_methods = results.normalization.unique() \n",
     "\n",
     "chosen_frequencies = df_freq\n",
