--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -147,9 +147,9 @@
    "outputs": [],
    "source": [
     "#exp_name = '2021_02_09_wall_tukey'; \n",
-    "#exp_name = '2021_02_09_wall'; \n",
+    "exp_name = '2021_02_09_wall'; \n",
     "#exp_name = '2020_12_9_rotating'; \n",
-    "exp_name = '2020_11_26_wall'; \n",
+    "#exp_name = '2020_11_26_wall'; \n",
     "#fname = f'results/{exp_name}_real.pkl'\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# frequency slices"
+    "# 0. Debug parsing"
    ]
   },
   {
@@ -178,16 +178,15 @@
    },
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
     "from pandas_utils import filter_by_dicts\n",
-    "from wall_detector import WallDetector, normalized_std\n",
-    "from frequency_analysis import apply_linear_mask, apply_box_mask\n",
-    "from frequency_analysis import psd_df_from_spec, get_index_matrix, extract_psd\n",
+    "from wall_detector import WallDetector, normalized_std, kwargs_datasets\n",
     "from bin_selection import generate_sweep\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "n_spurious = 2\n",
     "\n",
-    "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":0, \"motors\":0}]\n",
+    "chosen_dicts = [{\"appendix\":\"\", \"degree\": 0, \"distance\":6, \"motors\":0}]\n",
     "#chosen_dicts = [{\"appendix\":\"\", \"snr\": 1, \"degree\": 0, \"distance\":10, \"motors\":0}]\n",
     "df_mic_types = filter_by_dicts(df_freq, chosen_dicts)\n",
     "\n",
@@ -209,22 +208,37 @@
     "    label = f'{row.mic_type}, snr={row.snr}'\n",
     "    spec_masked = np.mean(spec_masked_all, axis=1)\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
+    "    fig.set_size_inches(5, 5)\n",
     "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
+    "    ax.set_xlim(kwargs_datasets[exp_name][row.mic_type]['min_time'],\n",
+    "                kwargs_datasets[exp_name][row.mic_type]['max_time'])\n",
+    "    ax.set_ylim(kwargs_datasets[exp_name][row.mic_type]['min_freq'],\n",
+    "                kwargs_datasets[exp_name][row.mic_type]['max_freq'])\n",
+    "    ax.set_xlabel('time [s]')\n",
+    "    ax.set_ylabel('frequency [Hz]')\n",
+    "    ax.set_title(label)\n",
+    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_spec.png')\n",
     "\n",
-    "    fig, axs = plt.subplots(1, psd.shape[0], squeeze=False, sharey=True)\n",
-    "    fig.set_size_inches(15, 5)\n",
-    "    for i in range(psd.shape[0]):\n",
+    "    for mic in range(psd.shape[0]):\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
     "        #axs[0, i].errorbar(freqs_psd, psd[i, :], std_psd[i, :], label=f'mic{i}')\n",
-    "        axs[0, i].plot(freqs_psd, std_psd[i, :], label=f'mic{i}', marker='o')\n",
+    "        df_here = wall_detector.df.loc[wall_detector.df.mic==mic]\n",
+    "        sns.scatterplot(data=df_here, \n",
+    "                        x='frequency', y='magnitude', \n",
+    "                        hue='counter', ax=ax,\n",
+    "                        linewidth=0)\n",
+    "        ax.set_xlabel('frequency [Hz]')\n",
+    "        #ax.plot(freqs_psd, std_psd[mic, :], label=f'mic{mic}', marker='o')\n",
     "        #[axs[0, i].axvline(f, color='black', ls=':') for f in freqs_psd]\n",
-    "        axs[0, i].legend()\n",
-    "    fig.suptitle(label)\n",
+    "        ax.set_yscale('log')\n",
+    "        ax.set_ylim(1e-3, 1e2)\n",
+    "        ax.grid(which='both')\n",
+    "        ax.set_title(f'mic{mic}')\n",
+    "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_mic{mic}.png')\n",
     "    \n",
     "    [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls='-') for f in freqs_psd]\n",
     "    ax_bins.plot([], [], color=f'C{j+1}', ls='-', label=label)\n",
-    "    plt.yscale('log')\n",
-    "    plt.ylim(1e-3, )\n",
     "\n",
     "bins, t_sec = generate_sweep('sweep')\n",
     "freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
@@ -234,105 +248,6 @@
     "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
     "ax_bins.set_yticks([])\n",
     "pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 0. Debug parsing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#distances = df_freq.distance.unique()[:3]\n",
-    "distances = [8, 9, 16]\n",
-    "#filter_dict = {'mic_type':'audio_deck', 'snr':3, 'motors':0}; mic_idx = 3\n",
-    "#filter_dict = {'mic_type':'audio_deck', 'snr':1, 'motors':0}; mic_idx = 3\n",
-    "filter_dict = {'mic_type':'audio_deck', 'snr':0, 'motors':0}; mic_idx = 3\n",
-    "#filter_dict = {'mic_type':'measurement', 'snr':0, 'motors':0}; mic_idx = 0\n",
-    "df_mic = filter_by_dicts(df_freq, [filter_dict])\n",
-    "\n",
-    "\n",
-    "wall_detector = WallDetector(exp_name=exp_name, mic_type=filter_dict['mic_type'])\n",
-    "\n",
-    "for i, distance in enumerate(distances):\n",
-    "    df_this = df_mic[df_mic.distance == distance]\n",
-    "    if len(df_this) != 1: \n",
-    "        print(f\"{len(df_this)} findings for {distance, filter_dict}\")\n",
-    "        continue\n",
-    "\n",
-    "    row = df_this.iloc[0]\n",
-    "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row, mask=True)\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked_all[:-1, mic_idx, :-1]))\n",
-    "    ax.set_title(f'distance={distance}cm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "\n",
-    "n_spurious = 2\n",
-    "wall_detector.remove_bad_freqs(mag_thresh=1e-3, std_thresh=1, verbose=False, dryrun=False)\n",
-    "wall_detector.remove_spurious_freqs(n_spurious, verbose=False, dryrun=False)\n",
-    "\n",
-    "df_matrix, distances, frequencies = wall_detector.get_df_matrix()\n",
-    "df_matrix_std, distances, frequencies = wall_detector.get_df_matrix(method=np.nanstd)\n",
-    "\n",
-    "print(distances)\n",
-    "\n",
-    "# was only here to test that both give the same\n",
-    "#df_matrix_old, distances_old, frequencies_old = wall_detector.get_df_matrix_old()\n",
-    "\n",
-    "df_sub = wall_detector.df\n",
-    "df_sub = df_sub[(df_sub.mic==mic_idx)]\n",
-    "\n",
-    "fig_all, ax_all = plt.subplots()\n",
-    "fig_all.set_size_inches(10, 5)\n",
-    "print(df_matrix.shape)\n",
-    "for i, distance in enumerate(distances):\n",
-    "    df_plot = df_sub.loc[df_sub.distance==distance]\n",
-    "    if len(df_plot) == 0:\n",
-    "        continue\n",
-    "    fig = plt.figure()\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    sns.scatterplot(data=df_plot, x='frequency', y='magnitude', hue='counter', linewidth=0, palette='inferno')\n",
-    "    plt.errorbar(frequencies, df_matrix[mic_idx, :, i], df_matrix_std[mic_idx, :, i])\n",
-    "    plt.xlim(1500, 4500)\n",
-    "    plt.title(f'distance {distance:.0f}cm, mic{mic_idx}')\n",
-    "    plt.yscale('log')\n",
-    "    #plt.ylim(1e-3, 50)\n",
-    "    plt.xlabel('frequency [Hz]')\n",
-    "    plt.ylabel('amplitude')\n",
-    "    \n",
-    "    fname = f'results/{exp_name}/{filter_dict[\"mic_type\"]}_{distance:.0f}_snr{filter_dict[\"snr\"]}.png'\n",
-    "    save_fig(fig, fname)\n",
-    "    \n",
-    "    ax_all.errorbar(frequencies, df_matrix[mic_idx, :, i], df_matrix_std[mic_idx, :, i], label=f'{distance}cm')\n",
-    "ax_all.legend()\n",
-    "ax_all.set_yscale('log')\n",
-    "ax_all.set_ylim(1e-3, 50)\n",
-    "ax_all.set_xlim(1500, 4500)\n",
-    "ax_all.set_xlabel('frequency [Hz]')\n",
-    "ax_all.set_ylabel('amplitude')\n",
-    "fname = f'results/{exp_name}/{filter_dict[\"mic_type\"]}_snr{filter_dict[\"snr\"]}.png'\n",
-    "save_fig(fig_all, fname)\n",
-    "#wall_detector.remove_spurious_freqs(n_spurious, verbose=True)\n",
-    "#df_amp, distances, frequencies = wall_detector.get_df_matrix()"
    ]
   },
   {
@@ -433,8 +348,8 @@
     "fname = 'results/wall_analysis.pkl'\n",
     "#method = 'dryrun'\n",
     "#method = 'new'\n",
-    "method = 'replace'\n",
-    "#method = 'read'\n",
+    "#method = 'replace'\n",
+    "method = 'read'\n",
     "\n",
     "if method == 'read': \n",
     "    results_df = pd.read_pickle(fname)\n",
@@ -474,13 +389,12 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "mic_type = 'measurement'\n",
-    "#mic_type = 'audio_deck'\n",
-    "snr = 0\n",
-    "exp_name = '2020_11_26_wall'\n",
-    "#exp_name = '2021_02_09_wall_tukey'\n",
-    "#exp_name = '2021_02_09_wall'\n",
-    "#exp_name = '2020_12_9_rotating'\n",
+    "#mic_type = 'measurement'\n",
+    "mic_type = 'audio_deck'\n",
+    "#exp_name = '2020_11_26_wall'; snr = 0\n",
+    "#exp_name = '2021_02_09_wall_tukey'; snr = 3\n",
+    "exp_name = '2021_02_09_wall'; snr = 3\n",
+    "#exp_name = '2020_12_9_rotating'; snr = 1\n",
     "\n",
     "filter_dict = dict(\n",
     "    exp_name = exp_name,\n",
@@ -647,7 +561,7 @@
     "    #spline = UnivariateSpline(xvalues, yvalues, k=2) \n",
     "    #plt.plot(xvalues, spline(xvalues), label='Spline', color='C5')\n",
     "\n",
-    "    knots = np.linspace(2000, 4000, 4)\n",
+    "    knots = np.linspace(1000, 5000, 7)[1:-1]\n",
     "    spline = LSQUnivariateSpline(xvalues, yvalues, t=knots, k=2, ext=3) \n",
     "    plt.plot(xvalues, spline(xvalues), label='LSQSpline', color=f'C{i+2}', marker='o')\n",
     "    [plt.axvline(k, color=f'C{i+2}') for k in knots]\n",
@@ -697,24 +611,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix'])\n",
+    "min_value = np.inf\n",
+    "max_value = -np.inf\n",
+    "\n",
+    "results = pd.DataFrame(columns=['normalization', 'data_type', 'matrix', 'values'])\n",
     "method_dict = dict(zip(['raw', 'normalize', 'calibration-offline', 'spline', 'calibration-online', 'standardize', 'zero_mean', 'theoretical'], \n",
     "                       ['', 'normalize', calib_function, calib_values, 'calibration-online', 'standardize', 'zero_mean', 'theoretical']))\n",
-    "chosen_mics = [0]\n",
-    "plot_channel_idx = 0\n",
+    "chosen_mics = range(4)\n",
     "\n",
     "__, df_freq, indices = prune_df_matrix(row.df_matrix, row.df_freq)\n",
     "df_theory_pruned = df_theory[:, indices, :]\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
     "    \n",
     "    for df_matrix, data_type in zip([row.df_matrix, df_theory], ['experimental', 'theoretical']): \n",
     "        \n",
+    "        values = None\n",
+    "        \n",
     "        df_matrix = df_matrix[chosen_mics, ...]\n",
     "        df_matrix = df_matrix[:, indices, :]\n",
-    "        print(key, data_type, df_matrix.shape)\n",
     "        if key not in ['raw', 'theoretical']:\n",
     "            \n",
     "            # in this case, we want to compare to the theoretical distribution with average \n",
@@ -725,11 +640,6 @@
     "            else:\n",
     "                df_norm, values = normalize_df_matrix(df_matrix=df_matrix, \n",
     "                                              freqs=df_freq, method=method)\n",
-    "            if data_type == 'theoretical':\n",
-    "                ax.plot(df_freq, values[plot_channel_idx], color=f'C{j}', ls=':')\n",
-    "            else:\n",
-    "                if key != 'spline':\n",
-    "                    ax.plot(df_freq, values[plot_channel_idx], label=f'{key}, {data_type}', color=f'C{j}')\n",
     "            \n",
     "        elif key == 'raw':\n",
     "            df_norm = deepcopy(df_matrix)\n",
@@ -742,27 +652,26 @@
     "        results.loc[len(results), :] = {\n",
     "            'normalization': key,\n",
     "            'data_type': data_type,\n",
-    "            'matrix': df_norm\n",
+    "            'matrix': df_norm,\n",
+    "            'values': values\n",
     "        }\n",
     "        #print(key, data_type, df_norm.shape)\n",
-    "        \n",
-    "ax.set_yscale('log')\n",
-    "ax.set_ylim(1e-3, 1e2)\n",
-    "ax.set_xlim(min_freq, max_freq)\n",
-    "ax.set_title(f'calibration values for mic {chosen_mics[plot_channel_idx]}')\n",
-    "ax.legend()"
+    "        min_value = min(min_value, abs(np.min(df_norm)))\n",
+    "        max_value = max(max_value, abs(np.max(df_norm)))\n",
+    "print(min_value, max_value)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "min_value = None\n",
-    "max_value = 3 #None\n",
+    "max_value = None\n",
+    "plot_channel_idx = 3\n",
     "\n",
     "for normalization, df in results.groupby('normalization', sort=False):\n",
     "    assert len(df) == 2\n",
@@ -790,11 +699,99 @@
     "    add_colorbar(ax, im)\n",
     "    axs[0, 0].set_title(f'{normalization}, experimental')\n",
     "    axs[0, 1].set_title(f'{normalization}, theoretical')\n",
-    "    axs[0, 2].set_title(f'{normalization}, log of relative error')\n",
+    "    axs[0, 3].set_title(f'{normalization}, log of relative error')\n",
     "    \n",
     "#print(np.nanmin(row.df_matrix), np.nanmax(row.df_matrix))\n",
     "#print(row.df_matrix.shape)\n",
     "#print(row.df_matrix[0, :, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# theoretical vs. measured: matrices\n",
+    "plot_channel_idx = 0\n",
+    "\n",
+    "df_raw = results.loc[results.normalization=='raw']\n",
+    "df_exp = df_raw.loc[df_raw.data_type=='experimental'].iloc[0].matrix[plot_channel_idx]\n",
+    "df_the = df_raw.loc[df_raw.data_type=='theoretical'].iloc[0].matrix[plot_channel_idx]\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, squeeze=False, sharey=True)\n",
+    "[ax.set_xlabel('distance [cm]') for ax in axs.flatten()]\n",
+    "axs[0, 0].set_title(row.mic_type)\n",
+    "axs[0, 1].set_title('theoretical')\n",
+    "\n",
+    "fig.set_size_inches(10, 5)\n",
+    "    #plot_df_matrix(row.df_dist, row.df_freq, df_norm[i], ax=axs[0, i], min_freq=min_freq, max_freq=max_freq, vmin=1e-3, vmax=3)\n",
+    "ax, im = plot_df_matrix(\n",
+    "    row.df_dist, df_freq, df_exp, ax=axs[0, 0], \n",
+    "    min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
+    "add_colorbar(ax, im)\n",
+    "ax, im = plot_df_matrix(\n",
+    "    row.df_dist, df_freq, df_the[:, distances_idx], ax=axs[0, 1], \n",
+    "    min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
+    "add_colorbar(ax, im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calibration plots \n",
+    "\n",
+    "distance = 6\n",
+    "\n",
+    "df_raw = results.loc[results.normalization=='raw']\n",
+    "df_exp = df_raw.loc[df_raw.data_type=='experimental'].iloc[0].matrix[plot_channel_idx]\n",
+    "df_the = df_raw.loc[df_raw.data_type=='theoretical'].iloc[0].matrix[plot_channel_idx]\n",
+    "\n",
+    "slice_exp = df_exp[:, distance]\n",
+    "slice_the = df_the[:, distances_idx][:, distance]\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
+    "fig.set_size_inches(10, 5)\n",
+    "\n",
+    "axs[0, 0].plot(df_freq, slice_exp, label='raw')\n",
+    "\n",
+    "axs[0, 1].plot(df_freq, slice_exp, label='raw')\n",
+    "axs[0, 1].plot(df_freq, slice_the, label='theory', color='C0', ls=':')\n",
+    "\n",
+    "plot_list = ['calibration-online', 'spline']\n",
+    "for normalization, df in results.groupby('normalization', sort=False):\n",
+    "    assert len(df) == 2\n",
+    "    if not normalization in plot_list:\n",
+    "        continue\n",
+    "    row_exp = df.loc[df.data_type=='experimental'].iloc[0]\n",
+    "    print(row_exp['values'].shape, len(df_freq))\n",
+    "    \n",
+    "    values = row_exp['values'][plot_channel_idx, :, 0]\n",
+    "    axs[0, 0].plot(df_freq, values, label=normalization)\n",
+    "    \n",
+    "    df_exp = row_exp.matrix[plot_channel_idx]\n",
+    "    slice_exp = df_exp[:, distance]\n",
+    "    axs[0, 1].plot(df_freq, slice_exp, label=normalization)\n",
+    "\n",
+    "axs[0, 0].legend(loc='lower right')\n",
+    "axs[0, 1].legend(loc='lower right')\n",
+    "\n",
+    "axs[0, 0].set_title('$|Y(f)|^2$')\n",
+    "axs[0, 1].set_title('$|H(f)|^2$')\n",
+    "\n",
+    "axs[0, 0].set_xlabel('frequency [Hz]')\n",
+    "axs[0, 1].set_xlabel('frequency [Hz]')\n",
+    "    \n",
+    "axs[0, 0].set_yscale('log')\n",
+    "axs[0, 1].set_yscale('log')\n",
+    "\n",
+    "axs[0, 0].set_ylim(1e-1, 1e1)\n",
+    "axs[0, 1].set_ylim(1e-1, 1e1)\n",
+    "#ax.set_ylim(1e-1, 1e1)\n",
+    "ax.set_title(f'calibration values for mic {chosen_mics[plot_channel_idx]}')"
    ]
   },
   {
