--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -360,53 +360,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_setup, Y_OFFSET, D0\n",
-    "distance_slices = [5, 10, 20, 30, 40, 50]\n",
-    "\n",
-    "max_frequency = 5000\n",
-    "min_frequency = 1000\n",
-    "n_freqs = 32\n",
-    "freq_indices = np.where((frequencies < max_frequency) & (frequencies > min_frequency))[0]\n",
-    "sparse_indices = np.linspace(freq_indices[0], freq_indices[-1], n_freqs).astype(int)\n",
-    "\n",
-    "matrix = df_matrix_theo\n",
-    "\n",
-    "fig, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
-    "fig.suptitle('frequency slices')\n",
-    "fig.set_size_inches(10, 10)\n",
-    "for i, d in enumerate(distance_slices):\n",
-    "    idx = np.argmin(np.abs(distances - d))\n",
-    "    slice_ = matrix[freq_indices, idx]**2\n",
-    "    axs[i].plot(frequencies[freq_indices], slice_, label=f'{d}cm')\n",
-    "    axs[i].set_xlabel('frequency [Hz]')\n",
-    "    axs[i].set_ylabel('response')\n",
-    "    axs[i].legend(loc='upper right')\n",
+    "def get_probability_fft(f_slice, frequencies, window=None):\n",
+    "    import scipy.signal.windows\n",
     "    \n",
-    "    slice_ = matrix[sparse_indices, idx]**2\n",
-    "    axs[i].scatter(frequencies[sparse_indices], slice_, label=f'{d}cm', color='C1')\n",
+    "    f_slice_norm = f_slice - np.mean(f_slice)\n",
+    "    fft = np.abs(np.fft.rfft(f_slice_norm))\n",
+    "    if window is not None:\n",
+    "        w = scipy.signal.windows.get_window(window, len(fft))\n",
+    "        fft *= w\n",
     "    \n",
-    "    source, mic_positions = get_setup(distance_cm=d, single_mic=False)\n",
-    "    source_image = [source[0], -source[1]]\n",
-    "    mic = mic_positions[mic_idx] \n",
-    "    \n",
-    "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
-    "    delta = np.linalg.norm(source_image - mic) - np.linalg.norm(source - mic)\n",
-    "    \n",
-    "    f_constr = SPEED_OF_SOUND / delta  # Hz\n",
-    "    [axs[i].axvline(x=f+1000, color='C1') for f in np.arange(2)*f_constr]\n",
-    "    \n",
-    "    fft = np.fft.rfft(slice_)[1:]\n",
-    "    df = np.mean(frequencies[sparse_indices[1:]] - frequencies[sparse_indices[:-1]])\n",
-    "    freq = np.fft.rfftfreq(len(slice_), df)[1:]\n",
-    "    \n",
-    "    plt.figure()\n",
-    "    plt.plot(1/freq, np.abs(fft), marker='o')\n",
-    "    plt.axvline(f_constr, color='C1')"
+    "    df = np.mean(frequencies[1:] - frequencies[:-1]) \n",
+    "    distances = np.fft.rfftfreq(len(f_slice), df) * SPEED_OF_SOUND * 100\n",
+    "    prob = fft / np.sum(fft)\n",
+    "    return distances / 2, prob"
    ]
   },
   {
@@ -414,7 +383,96 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_probability_cost(f_slice, frequencies, distances, ax=None):\n",
+    "    f_slice_norm = f_slice - np.mean(f_slice)\n",
+    "    f_slice_norm /= np.std(f_slice_norm)\n",
+    "    \n",
+    "    probs = []\n",
+    "    for d in distances:\n",
+    "        f_slice_theory = get_freq_slice_theory(frequencies, d, yaw_deg=0)[mic_idx]\n",
+    "        f_slice_theory -= np.mean(f_slice_theory)\n",
+    "        f_slice_theory /= np.std(f_slice_theory)\n",
+    "        probs.append(np.exp(-np.linalg.norm(f_slice_theory-f_slice_norm)))\n",
+    "        \n",
+    "        if ax is not None:\n",
+    "            ax.plot(frequencies, f_slice_theory, color='black')\n",
+    "            \n",
+    "    if ax is not None:\n",
+    "        ax.plot(frequencies, f_slice_norm, color='green')\n",
+    "        \n",
+    "    probs /= np.sum(probs)\n",
+    "    return probs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from simulation import get_real_distance\n",
+    "distance_slices = [5, 10, 20, 30, 40, 50]\n",
+    "\n",
+    "window = 'hann' #('tukey', 0.2) #None\n",
+    "max_frequency = 5000\n",
+    "min_frequency = 1000\n",
+    "n_freqs = 32\n",
+    "freq_indices = np.where((frequencies < max_frequency) & (frequencies > min_frequency))[0]\n",
+    "sparse_indices = np.linspace(freq_indices[0], freq_indices[-1], n_freqs).astype(int)\n",
+    "\n",
+    "freq_cont = frequencies[freq_indices]\n",
+    "freq_sparse = frequencies[sparse_indices]\n",
+    "\n",
+    "matrix = df_matrix_theo\n",
+    "\n",
+    "distances_grid = np.linspace(0, 70, 70)\n",
+    "distances_real = [get_real_distance(distance_cm=d, mic_idx=mic_idx)/2 for d in distances_grid]\n",
+    "\n",
+    "fig, axs = plt.subplots(len(distance_slices), sharey=True, sharex=True)\n",
+    "fig.suptitle('frequency slices')\n",
+    "fig.set_size_inches(10, 10)\n",
+    "for i, d in enumerate(distance_slices):\n",
+    "    idx = np.argmin(np.abs(distances - d))\n",
+    "    slice_cont = matrix[freq_indices, idx]**2\n",
+    "    slice_sparse = matrix[sparse_indices, idx]**2\n",
+    "    \n",
+    "    d_cont, p_fft_cont = get_probability_fft(slice_cont, freq_cont, window=window)\n",
+    "    d_sparse, p_fft_sparse = get_probability_fft(slice_sparse, freq_sparse, window=window)\n",
+    "    \n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #p_cost_cont = get_probability_cost(slice_cont, freq_cont, distances_grid, ax=ax)\n",
+    "    p_cost_cont = get_probability_cost(slice_cont, freq_cont, distances_grid)\n",
+    "    p_cost_sparse = get_probability_cost(slice_sparse, freq_sparse, distances_grid)\n",
+    "    \n",
+    "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
+    "    delta = get_real_distance(distance_cm=d, mic_idx=mic_idx)\n",
+    "    \n",
+    "    axs[i].set_ylabel('response')\n",
+    "    axs[i].plot(freq_cont, slice_cont, label=f'{d}cm', color='C0')\n",
+    "    axs[i].scatter(freq_sparse, slice_sparse, color='C0')\n",
+    "    axs[i].legend(loc='upper right')\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.plot(d_sparse, p_fft_sparse, marker='o', label='FFT')\n",
+    "    plt.plot(distances_real, p_cost_sparse, marker='o', label='optimization')\n",
+    "    plt.axvline(delta / 2, color='black', label='real distance')\n",
+    "    plt.title(f'{d}cm')\n",
+    "    plt.xlim(0, 70)\n",
+    "    plt.ylim(1e-4, 1)\n",
+    "    plt.legend()\n",
+    "    plt.yscale('log')\n",
+    "axs[i].set_xlabel('frequency [Hz]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Noise study"
+   ]
   },
   {
    "cell_type": "code",
