Added distance study

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -479,6 +479,64 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "d0 = 5 #[cm]\n",
+    "def delta(d, beta, d0=5):\n",
+    "    \"\"\"\n",
+    "    :param d: orthogonal distance from wall\n",
+    "    :param beta: angle between mic-source and wall normal\n",
+    "    \"\"\"\n",
+    "    d = np.array([d]) if type(d) != np.ndarray else d\n",
+    "    beta = np.array([beta]) if type(beta) != np.ndarray else beta\n",
+    "    d1 = np.sqrt(d0**2 + 4*d[None, :]**2 - 4*d[None, :]*d0*np.cos(beta[:, None]))\n",
+    "    return d1 - d0\n",
+    "\n",
+    "d_arr = np.arange(5, 50 ,step=5)\n",
+    "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
+    "delta_matrix = delta(d_arr, beta_arr, d0)\n",
+    "\n",
+    "plt.figure()\n",
+    "for j, d in enumerate(d_arr):\n",
+    "    plt.plot(beta_arr * 180 / np.pi, delta_matrix[:, j], label=f'{d}cm')\n",
+    "plt.xlabel('beta [deg]')\n",
+    "plt.ylabel('delta [cm]')\n",
+    "plt.legend(bbox_to_anchor=[1.0, 1.0], loc='upper left', title='orthogonal distance')\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def orthogonal_distance(delta, beta, d0=5):\n",
+    "    delta = np.array([delta]) if type(delta) != np.ndarray else delta\n",
+    "    beta = np.array([beta]) if type(beta) != np.ndarray else beta\n",
+    "    d1 = delta + d0\n",
+    "    d0cos = d0 * np.cos(beta)\n",
+    "    d = 0.5 * (d0cos[:, None] + np.sqrt(d0cos[:, None]**2 + d1[None, :]**2 - d0**2))\n",
+    "    return d\n",
+    "\n",
+    "d0 = 5\n",
+    "delta_arr = np.arange(10, 100, step=10)\n",
+    "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
+    "d_matrix = orthogonal_distance(delta_arr, beta_arr, d0)\n",
+    "\n",
+    "plt.figure()\n",
+    "for j, d in enumerate(delta_arr):\n",
+    "    plt.plot(beta_arr * 180 / np.pi, d_matrix[:, j], label=f'{d}cm')\n",
+    "plt.xlabel('beta [deg]')\n",
+    "plt.ylabel('orthogonal distance [cm]')\n",
+    "plt.legend(bbox_to_anchor=[1.0, 1.0], loc='upper left', title='delta')\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
