Fix windowing for measurement mic, improve plotting tools

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -31,81 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from plotting_tools import *\n",
     "from wall_analysis import load_params\n",
-    "\n",
-    "def plot_square(x_indices, y_indices, ax):\n",
-    "    ax.plot([x_indices[0], x_indices[-1]], [y_indices[-1],y_indices[-1]], color='red', linewidth=1)\n",
-    "    ax.plot([x_indices[0], x_indices[-1]], [y_indices[0], y_indices[0]], color='red', linewidth=1)\n",
-    "    ax.plot([x_indices[0], x_indices[0]], [y_indices[0],  y_indices[-1]], color='red', linewidth=1)\n",
-    "    ax.plot([x_indices[-1],x_indices[-1]], [y_indices[0], y_indices[-1]], color='red', linewidth=1)\n",
-    "\n",
-    "def plot_df_matrix(dist, freq, df_matrix, ax=None, min_freq=None, max_freq=None, **kwargs):\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots()\n",
-    "    \n",
-    "    mask = np.ones(freq.shape, dtype=np.bool)\n",
-    "    if min_freq is not None:\n",
-    "        mask &= (freq > min_freq)\n",
-    "    if max_freq is not None:\n",
-    "        mask &= (freq < max_freq)\n",
-    "    im = ax.pcolorfast(dist, freq[mask], df_matrix[mask][:-1, :-1], **kwargs)\n",
-    "    return ax, im\n",
     "\n",
     "def init_results_df():\n",
     "    return pd.DataFrame(columns=['mic_type', 'snr', 'motors', 'exp_name', 'df_matrix', 'df_dist', 'df_freq'])\n",
     "\n",
-    "def make_dirs(fname):\n",
-    "    import os\n",
-    "    dirname = os.path.dirname(fname)\n",
-    "    if not os.path.exists(dirname):\n",
-    "        os.makedirs(dirname)\n",
-    "        \n",
-    "def save_fig(fig, fname, extension='pdf'):\n",
-    "    extension_current = fname.split('.')[-1]\n",
-    "    fname = fname.replace('.' + extension_current, '.' + extension)\n",
-    "    make_dirs(fname)\n",
-    "    fig.savefig(fname, bbox_inches='tight')\n",
-    "    print('saved as', fname)\n",
-    "    \n",
-    "def add_colorbar(ax, im):\n",
-    "    from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "    divider = make_axes_locatable(ax)\n",
-    "    cax = divider.append_axes('right', size='5%', pad=0.05)\n",
-    "    fig.colorbar(im, cax=cax, orientation='vertical');\n",
-    "\n",
-    "def plot_spectrograms(df_freq):\n",
-    "    from frequency_analysis import get_spectrogram_raw\n",
-    "    mic_type = 'measurement'\n",
-    "    cut_x = range(0, 20)\n",
-    "    cut_y = range(1000, 3000)\n",
-    "\n",
-    "    filters = ['mic_type', 'snr', 'source', 'degree', 'distance']\n",
-    "    for chosen_tuple, df_source in df_freq.groupby(filters):\n",
-    "\n",
-    "        fig, axs = plt.subplots(1, 2, squeeze=False)\n",
-    "        fig.set_size_inches(15, 5)\n",
-    "        fig.suptitle(dict(zip(filters, chosen_tuple)))\n",
-    "\n",
-    "        for j, motors in enumerate([0, \"all43000\"]):\n",
-    "            df_this = df_source[df_source.motors==motors]\n",
-    "            if len(df_this) != 1:\n",
-    "                print(df_this)\n",
-    "                continue\n",
-    "            row = df_this.iloc[0]\n",
-    "\n",
-    "            spec_all, freqs = get_spectrogram_raw(row.frequencies_matrix, row.stft)\n",
-    "            spec = np.mean(spec_all, axis=1) # n_times x n_mics x n_freqs\n",
-    "\n",
-    "            axs[0, j].pcolorfast(row.seconds, freqs, np.log10(spec[:-1, :-1]))\n",
-    "            axs[0, j].set_title(f'motors {motors}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def cost_period(slice_the, slice_exp):\n",
     "    cost = 0\n",
     "    assert slice_the.shape[1] == slice_exp.shape[1]\n",
@@ -262,8 +193,8 @@
    },
    "outputs": [],
    "source": [
-    "exp_name = '2021_02_09_wall_tukey'; \n",
-    "#exp_name = '2021_02_09_wall'; \n",
+    "#exp_name = '2021_02_09_wall_tukey'; \n",
+    "exp_name = '2021_02_09_wall'; \n",
     "#exp_name = '2020_12_9_rotating'; \n",
     "#exp_name = '2020_11_26_wall'; \n",
     "#fname = f'results/{exp_name}_real.pkl'\n",
@@ -301,10 +232,11 @@
     "from bin_selection import generate_sweep\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
-    "distance = 2\n",
+    "distance = 10\n",
     "degree = 0\n",
+    "#motors = 0 #\"all45000\"\n",
     "\n",
-    "chosen_dicts = [{\"degree\": degree, \"distance\":distance, \"motors\":0}]\n",
+    "chosen_dicts = [{\"degree\": degree, \"distance\":distance}]\n",
     "df_mic_types = filter_by_dicts(df_all, chosen_dicts)\n",
     "print('plotting\\n', df_mic_types.iloc[:, :8])\n",
     "\n",
@@ -321,7 +253,6 @@
     "    wall_detector.remove_spurious_freqs(verbose=False)\n",
     "    \n",
     "    # plotting\n",
-    "    label = f'{row.mic_type}, snr={row.snr}'\n",
     "    spec_masked = np.mean(spec_masked_all, axis=1)\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(5, 5)\n",
@@ -332,26 +263,33 @@
     "                kwargs_datasets[exp_name][row.mic_type]['max_freq'])\n",
     "    ax.set_xlabel('time [s]')\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
-    "    ax.set_title(label)\n",
-    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_spec_distance{distance:.0f}.png')\n",
+    "    #save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}_spec.png')\n",
     "\n",
-    "    for mic, df_mic in wall_detector.df.groupby('mic'):\n",
-    "        fig, ax = plt.subplots()\n",
-    "        fig.set_size_inches(5, 5)\n",
-    "        sns.scatterplot(data=df_mic, \n",
-    "                        x='frequency', y='magnitude', \n",
-    "                        hue='counter', ax=ax,\n",
-    "                        linewidth=0)\n",
-    "        ax.set_xlabel('frequency [Hz]')\n",
-    "        ax.set_yscale('log')\n",
-    "        ax.set_ylim(1e-3, 1e2)\n",
-    "        ax.grid(which='both')\n",
-    "        ax.set_title(f'mic{mic}')\n",
-    "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_mic{mic}_distance{distance:.0f}.png')\n",
+    "    mic = 0 \n",
+    "    df_mic = wall_detector.df[wall_detector.df.mic==mic]\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(5, 5)\n",
+    "    sns.scatterplot(data=df_mic, \n",
+    "                    x='frequency', y='magnitude', \n",
+    "                    hue='counter', ax=ax,\n",
+    "                    linewidth=0)\n",
+    "    ax.set_xlabel('frequency [Hz]')\n",
+    "    ax.set_yscale('log')\n",
+    "    ax.set_ylim(1e-3, 1e2)\n",
+    "    ax.grid(which='both')\n",
+    "    ax.set_title(f'mic{mic}')\n",
+    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}.png')\n",
     "    \n",
     "    freqs_psd = wall_detector.df.frequency.unique()\n",
     "    [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls='-') for f in freqs_psd]\n",
+    "    \n",
+    "    label = f'{row.mic_type}, motors={row.motors}, snr={row.snr}'\n",
     "    ax_bins.plot([], [], color=f'C{j+1}', ls='-', label=label)\n",
+    "    \n",
+    "    fig, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
+    "    ax.set_title(f'{exp_name} {row.mic_type}')\n",
+    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}_raw.png')\n",
     "\n",
     "bins, t_sec = generate_sweep('sweep')\n",
     "freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
@@ -433,8 +371,8 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "#mic_type = 'measurement'\n",
-    "mic_type = 'audio_deck'\n",
+    "mic_type = 'measurement'\n",
+    "#mic_type = 'audio_deck'\n",
     "\n",
     "#exp_name = '2020_11_26_wall'; snr = 0\n",
     "#exp_name = '2021_02_09_wall_tukey'; snr = 3\n",
@@ -923,8 +861,7 @@
     "            costs.append(cost)\n",
     "            \n",
     "        #proba_period = \n",
-    "        \n",
-    "        proba_cost = np.exp(-costs)\n",
+    "        proba_cost = np.exp(-np.array(costs))\n",
     "        proba_cost /= np.sum(proba_cost)\n",
     "\n",
     "        # algorithm\n",
@@ -940,7 +877,7 @@
     "        ax.set_ylabel('amplitude')\n",
     "        ax.set_title(f'slices for distance {distance:.0f}cm')\n",
     "\n",
-    "        ax_cost.plot(distances_grid, costs, color=f'C{i_method}', label=method)\n",
+    "        ax_cost.semilogy(distances_grid, proba_cost, color=f'C{i_method}', label=method)\n",
     "        ax_cost.axvline(x=distance, color='black', ls=':')\n",
     "        ax_cost.axvline(x=d_est, color=f'C{i_method}', ls=':')\n",
     "        ax_cost.set_xlabel('distance sweep [cm]')\n",
