--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -510,6 +510,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from plotting_tools import save_fig\n",
+    "\n",
     "def orthogonal_distance(delta, beta, d0=5):\n",
     "    delta = np.array([delta]) if type(delta) != np.ndarray else delta\n",
     "    beta = np.array([beta]) if type(beta) != np.ndarray else beta\n",
@@ -523,13 +525,15 @@
     "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
     "d_matrix = orthogonal_distance(delta_arr, beta_arr, d0)\n",
     "\n",
-    "plt.figure()\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(5, 5)\n",
     "for j, d in enumerate(delta_arr):\n",
     "    plt.plot(beta_arr * 180 / np.pi, d_matrix[:, j], label=f'{d}cm')\n",
-    "plt.xlabel('beta [deg]')\n",
+    "plt.xlabel('wall angle [deg]')\n",
     "plt.ylabel('orthogonal distance [cm]')\n",
+    "plt.grid(which='both')\n",
     "plt.legend(bbox_to_anchor=[1.0, 1.0], loc='upper left', title='delta')\n",
-    "plt.grid()"
+    "save_fig(fig, 'plots/theory_distances.png')"
    ]
   },
   {
